[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/bullet.png" type="Texture2D" id=1]
[ext_resource path="res://game/bullet.gd" type="Script" id=2]
[ext_resource path="res://framework/node_modules/drop_shadow/DropShadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/bullet_shoot_02.wav" type="AudioStream" id=5]
[ext_resource path="res://game/bullet_explode_01.wav" type="AudioStream" id=6]
[ext_resource path="res://game/bullet_explode_03.wav" type="AudioStream" id=7]
[ext_resource path="res://game/shooter_lock_01.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Bullet" type="Node2D"]
z_index = 4
script = ExtResource( 2 )
friction = 1.0
line_segment_count = 24

[node name="DropShadow" parent="." instance=ExtResource( 3 )]
z_index = -8
target = NodePath("../Sprite2D")
shadow_offset = Vector2( 2, 1 )
copy_scale = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.964706, 0.458824, 0.478431, 1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="ExplodeSound" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 6 )
bus = "BulletExplosin"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 5 )
bus = "BulletExplosin"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 7 )
bus = "BulletExplosin"

[node name="ExplosionLine" type="Line2D" parent="."]
visible = false
width = 1.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="BlastShadow" type="Polygon2D" parent="."]
z_index = -8
color = Color( 0, 0, 0, 0.490196 )
offset = Vector2( 2, 1 )

[node name="ExplosionPolygon" type="Polygon2D" parent="."]
z_index = 1
color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )
disabled = true

[node name="ExplodeSound2" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound2/RandomAudioPlayer" index="0"]
stream = ExtResource( 8 )
bus = "Game"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="ExplodeSound"]
[editable path="ExplodeSound/RandomAudioPlayer"]
[editable path="ExplodeSound2"]
[editable path="ExplodeSound2/RandomAudioPlayer"]
